--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = ">=3.9,<4.0"
 geopy = "2.*"
 pandas = "1.*"
 scikit-learn = "0.*"
-folium = "^0.*"
+folium = "0.*"
 gunicorn = "20*"
 lxml = "4.*"
 requests = "2.*"
@@ -23,7 +23,7 @@ psycopg2-binary = "2.*"
 dash-bootstrap-components = "1.*"
 dash-table = "5.*"
 lightgbm = "3.*"
-toml = "^0.10.2"
+toml = "0.*"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.*"
