--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,8 @@ lightgbm = "3.*"
 toml = "0.*"
 
 [tool.poetry.dev-dependencies]
-mypy = "0.*"
-black = "21.9b0"
+mypy = "*"
+black = "*"
 jupyterlab = "3.*"
 matplotlib = "3.*"
 tqdm = "4.*"
@@ -36,7 +36,8 @@ ipywidgets = "7.*"
 optuna = "2.*"
 mlflow = "1.*"
 xgboost = "1.*"
-types-requests = "^2.25.9"
+types-requests = "*"
+pytest = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
