--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,12 @@ pytest = "*"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+log_cli_level = "DEBUG"
+log_file_level = "DEBUG"
+log_file = "test/test.log"
+log_cli_format = "%(asctime)s %(levelname)8s (%(name)s:%(lineno)s): %(message)s"
+log_file_format = "%(asctime)s %(levelname)8s (%(name)s:%(lineno)s): %(message)s"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+log_file_date_format = "%Y-%m-%d %H:%M:%S"
