--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ Flask-SQLAlchemy = "2.*"
 Flask-Migrate = "3.*"
 flask-marshmallow = "0.*"
 marshmallow-sqlalchemy = "0.*"
-dynaconf = "3.*"
 python-dotenv = "0.*"
 psycopg2-binary = "2.*"
 dash-bootstrap-components = "1.*"
@@ -38,6 +37,7 @@ mlflow = "1.*"
 xgboost = "1.*"
 types-requests = "*"
 pytest = "*"
+types-toml = "^0.10.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
