--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dash-bootstrap-components = "1.*"
 dash-table = "5.*"
 lightgbm = "3.*"
 toml = "0.*"
+dynaconf = "3.*"
 
 [tool.poetry.dev-dependencies]
 mypy = "*"
