--- a/settings.toml
+++ b/settings.toml
@@ -1,4 +1,8 @@
 [default]
+FLASK_APP = '@jinja {{env.FLASK_APP}}'
+FLASK_ENV = '@jinja {{env.FLASK_ENV}}'
+FLASK_DEBUG = '@jinja {{env.FLASK_DEBUG}}'
+PORT = '@jinja {{env.PORT}}'
 SQLALCHEMY_TRACK_MODIFICATIONS = false
 POSTGRES_DB = "imoveis"
 
@@ -31,11 +35,11 @@ POSTGRES_DB = "imoveis"
 [development]
 DEBUG = true
 max_page = 1
-SQLALCHEMY_DATABASE_URI  = '@format postgresql://{POSTGRES_USER}:{POSTGRES_PASSWORD}@localhost:15432/{POSTGRES_DB}'
+SQLALCHEMY_DATABASE_URI  = '@jinja postgresql://{{env.POSTGRES_USER}}:{{env.POSTGRES_PASSWORD}}@localhost:15432/{{env.POSTGRES_DB}}'
 force_update = true
 
 [production]
 DEBUG = false
 max_page = 50
-SQLALCHEMY_DATABASE_URI  = '@format postgresql://{POSTGRES_USER}:{POSTGRES_PASSWORD}@db:5432/{POSTGRES_DB}'
+SQLALCHEMY_DATABASE_URI  = '@jinja postgresql://{{env.POSTGRES_USER}}:{{env.POSTGRES_PASSWORD}}@db:5432/{{env.POSTGRES_DB}}'
 force_update = true
