--- a/.env
+++ b/.env
@@ -6,3 +6,11 @@ PORT=5000
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=listing
+
+# POSTGRES_HOST=localhost # para utilizar localmente
+POSTGRES_HOST=db # para utilizar via docker-compose
+
+# POSTGRES_PORT=15432 # para utilizar localmente
+POSTGRES_PORT=5432 # para utilizar via docker-compose
+
+
