--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = ""
 authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<4.0"
+python = ">=3.9,<3.11"
 geopy = "2.*"
 pandas = "1.*"
 scikit-learn = "0.*"
 folium = "0.*"
-gunicorn = "20*"
+gunicorn = "20.*"
 lxml = "4.*"
 requests = "2.*"
 Flask-SQLAlchemy = "2.*"
